[tool.poetry]
name = "mlp"
version = "0.1.0"
description = ""
authors = ["gogsUser <gogs@gogs.gogs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
