[tool.poetry]
name = "mlp"
version = "0.1.0"
description = ""
authors = ["gogsUser <gogs@gogs.gogs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
byc-pyflow = "1.0.0"
pyqt5-qt5 = "5.15.2"
pyqtwebengine-qt5 = "5.15.2"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
